--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,11 @@
  <div class="wrapper">
     <nav class="nav">
         <div class="nav-logo">
-            <p>LOGO .</p>
+            <p>Security .</p>
         </div>
         <div class="nav-menu" id="navMenu">
             <ul>
-                <li><a href="#" class="link active">Home</a></li>
+                <li><a href="index.html" class="link active">Home</a></li>
                 <li><a href="information.html" class="link">Information</a></li>
             </ul>
         </div>
