Changed wallpaper, improved information page

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hackathon | Login & Registration</title>
 </head>
 <body>
@@ -78,6 +78,10 @@
             </div>
             <div class="input-box">
                 <input type="text" class="input-field" placeholder="Email">
+                <i class="bx bx-envelope"></i>
+            </div>
+            <div class="input-box">
+                <input type="text" class="input-field" placeholder="Username">
                 <i class="bx bx-envelope"></i>
             </div>
             <div class="input-box">
